<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="7">

    <LinearLayout
        android:id="@+id/resultText_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/resultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/resultTextInfo"
            android:textColor="@color/black"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/time_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/time_result"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/result_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="5"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/score_player1_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/score_player1"
                style="@style/score_players"
                android:text="@string/score_player1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/score_space"
                style="@style/score_players"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/score_space" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/score_player2_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/score_player2"
                style="@style/score_players"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/score_player2" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/start_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="#00B300"
            android:gravity="center"
            android:text="@string/start_button" />

        <ImageView
            android:id="@+id/start_circle_wait"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/circle_description"
            android:visibility="gone"
            app:srcCompat="@drawable/circle"
            app:tint="#FFC800" />

        <ImageView
            android:id="@+id/start_circle_ready"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/circle_description"
            app:tint="#00FF00"
            android:visibility="gone"
            app:srcCompat="@drawable/circle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:baselineAligned="false"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/player1_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/player1_nickname"
                style="@style/nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player1_name" />

            <EditText
                android:id="@+id/player1_nickname_edit"
                style="@style/nickname_edit"
                android:autofillHints=""
                android:hint="@string/nickname_edit_hint"
                android:text="@string/player1_name_edit" />

            <Button
                android:id="@+id/player1_nickname_edit_button"
                style="@style/nickname_edit_button"
                android:text="@string/button_change_nickname" />

            <Button
                android:id="@+id/player1_button"
                style="@style/push_button"
                android:text="@string/button_name"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/player2_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/player2_nickname"
                style="@style/nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player2_name" />

            <EditText
                android:id="@+id/player2_nickname_edit"
                style="@style/nickname_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/nickname_edit_hint"
                android:inputType="textPersonName"
                android:text="@string/player2_name_edit" />

            <Button
                android:id="@+id/player2_nickname_edit_button"
                style="@style/nickname_edit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_change_nickname" />

            <Button
                android:id="@+id/player2_button"
                style="@style/push_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_name" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>